La parte de Kevin

--- a/src/app/pages/menu-rest/menu-rest.component.html
+++ b/src/app/pages/menu-rest/menu-rest.component.html
@@ -1,2 +1,213 @@
-<p>menu-rest works!</p>
-<h1>prueba</h1>
+<main class="contaner-fluid p-4">
+    <div class="">
+      <h2 class="titulo">Kentucky Fried Chicken</h2>
+    </div>
+    <section class="wrap">
+      <div class="wrap column-2 carta">
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="" alt="" />
+          </div>
+          <div class="title-plato-carta">
+            <h4>Lorem, ipsum dolor.</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+              lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
+              turpis. nulla consequat, in varius libero ultrices. Nullam sodales
+              turpis.
+            </p>
+            <div class="cta-wrap_tarjeta-rest">
+              <div class="precio_tarjeta-rest">
+                <span>S/60.00</span>
+              </div>
+              <div class="cta_tarjeta-rest">
+                <a href="">Agregar</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="" alt="" />
+          </div>
+          <div class="title-plato-carta">
+            <h4>Lorem, ipsum dolor.</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+              lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
+              turpis. nulla consequat, in varius libero ultrices. Nullam sodales
+              turpis.
+            </p>
+            <div class="cta-wrap_tarjeta-rest">
+                <div class="precio_tarjeta-rest">
+                  <span>S/60.00</span>
+                </div>
+                <div class="cta_tarjeta-rest">
+                  <a href="">Agregar</a>
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="" alt="" />
+          </div>
+          <div class="title-plato-carta">
+            <h4>Lorem, ipsum dolor.</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+              lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
+              turpis. nulla consequat, in varius libero ultrices. Nullam sodales
+              turpis.
+            </p>
+            <div class="cta-wrap_tarjeta-rest">
+              <div class="precio_tarjeta-rest">
+                <span>S/60.00</span>
+              </div>
+              <div class="cta_tarjeta-rest">
+                <a href="">Agregar</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="wrap-title-section"></div>
+      <div class="wrap column-2 carta">
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="" alt="" />
+          </div>
+          <div class="title-plato-carta">
+            <h4>Lorem, ipsum dolor.</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+              lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
+              turpis. nulla consequat, in varius libero ultrices. Nullam sodales
+              turpis.
+            </p>
+            <div class="cta-wrap_tarjeta-rest">
+              <div class="precio_tarjeta-rest">
+                <span>S/60.00</span>
+              </div>
+              <div class="cta_tarjeta-rest">
+                <a href="">Agregar</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="" alt="" />
+          </div>
+          <div class="title-plato-carta">
+            <h4>Lorem, ipsum dolor.</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+              lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
+              turpis. nulla consequat, in varius libero ultrices. Nullam sodales
+              turpis.
+            </p>
+            <div class="cta-wrap_tarjeta-rest">
+              <div class="precio_tarjeta-rest">
+                <span>S/60.00</span>
+              </div>
+              <div class="cta_tarjeta-rest">
+                <a href="">Agregar</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="" alt="" />
+          </div>
+          <div class="title-plato-carta">
+            <h4>Lorem, ipsum dolor.</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+              lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
+              turpis. nulla consequat, in varius libero ultrices. Nullam sodales
+              turpis.
+            </p>
+            <div class="cta-wrap_tarjeta-rest">
+              <div class="precio_tarjeta-rest">
+                <span>S/60.00</span>
+              </div>
+              <div class="cta_tarjeta-rest">
+                <a href="">Agregar</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="wrap column-2 carta">
+          <div class="plato-carta">
+            <div class="img-plato-carta">
+              <img src="" alt="" />
+            </div>
+            <div class="title-plato-carta">
+              <h4>Lorem, ipsum dolor.</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+                lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
+                turpis. nulla consequat, in varius libero ultrices. Nullam sodales
+                turpis.
+              </p>
+              <div class="cta-wrap_tarjeta-rest">
+                <div class="precio_tarjeta-rest">
+                  <span>S/60.00</span>
+                </div>
+                <div class="cta_tarjeta-rest">
+                  <a href="">Agregar</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="plato-carta">
+            <div class="img-plato-carta">
+              <img src="" alt="" />
+            </div>
+            <div class="title-plato-carta">
+              <h4>Lorem, ipsum dolor.</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+                lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
+                turpis. nulla consequat, in varius libero ultrices. Nullam sodales
+                turpis.
+              </p>
+              <div class="cta-wrap_tarjeta-rest">
+                <div class="precio_tarjeta-rest">
+                  <span>S/60.00</span>
+                </div>
+                <div class="cta_tarjeta-rest">
+                  <a href="">Agregar</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="plato-carta">
+            <div class="img-plato-carta">
+              <img src="" alt="" />
+            </div>
+            <div class="title-plato-carta">
+              <h4>Lorem, ipsum dolor.</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+                lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
+                turpis. nulla consequat, in varius libero ultrices. Nullam sodales
+                turpis.
+              </p>
+              <div class="cta-wrap_tarjeta-rest">
+                <div class="precio_tarjeta-rest">
+                  <span>S/60.00</span>
+                </div>
+                <div class="cta_tarjeta-rest">
+                  <a href="">Agregar</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <div class="wrap-title-section"></div>
+    </section>
+  </main>
