--- a/src/app/pages/admin/gestion-menu/gestion-menu.component.html
+++ b/src/app/pages/admin/gestion-menu/gestion-menu.component.html
@@ -1,1 +1,33 @@
-<p>gestion-menu works!</p>
+<main class="p-5">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <h2 class="titulo">Gestión del Menú de Restaurantes</h2>
+        <button class="btn btn-success"><i class="bi bi-plus-circle"></i> Registrar</button>
+    </div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Nombre</th>
+                <th scope="col">Descripción</th>
+                <th scope="col">Cantidad</th>
+                <th scope="col">Categoría</th>
+                <th scope="col">Precio</th>
+                <th scope="col">Imagen</th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Pollos a la Brasa</td>
+                <td>Text</td>
+                <td>Text</td>
+                <td>Text</td>
+                <td>Text</td>
+                <td><img src="../../../../assets/images/imgPrueba/Pollo-Brasa.webp" height="50"></td>
+                <td>
+                    <button class="btn btn-warning"><i class="bi bi-pencil-square"></i></button>
+                    <button class="btn btn-danger btnDelete"><i class="bi bi-trash3-fill"></i></button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</main>
