--- a/src/app/pages/admin/gestion-rest-asociados/gestion-rest-asociados.component.html
+++ b/src/app/pages/admin/gestion-rest-asociados/gestion-rest-asociados.component.html
@@ -1,1 +1,29 @@
-<p>gestion-rest-asociados works!</p>
+<main class="p-5">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <h2 class="titulo">Gestión de Acuerdos Comerciales</h2>
+        <button class="btn btn-success"><i class="bi bi-plus-circle"></i> Registrar</button>
+    </div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Nombre</th>
+                <th scope="col">Fecha</th>
+                <th scope="col">Descripción</th>
+                <th scope="col">ID Rest</th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Acuerdo Bembos</td>
+                <td>Text</td>
+                <td>Text</td>
+                <td>Text</td>
+                <td>
+                    <button class="btn btn-warning"><i class="bi bi-pencil-square"></i></button>
+                    <button class="btn btn-danger btnDelete"><i class="bi bi-trash3-fill"></i></button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</main>
