--- a/src/app/pages/admin/gestion-menu/gestion-menu.component.html
+++ b/src/app/pages/admin/gestion-menu/gestion-menu.component.html
@@ -22,7 +22,7 @@
                 <td>Text</td>
                 <td>Text</td>
                 <td>Text</td>
-                <td><img src="../../../../assets/images/imgPrueba/Pollo-Brasa.webp" height="50"></td>
+                <td><img src="../../../../assets/images/galeria/p1.jpg" height="50"></td>
                 <td>
                     <button class="btn btn-warning"><i class="bi bi-pencil-square"></i></button>
                     <button class="btn btn-danger btnDelete"><i class="bi bi-trash3-fill"></i></button>
