--- a/src/app/pages/menu-rest/menu-rest.component.css
+++ b/src/app/pages/menu-rest/menu-rest.component.css
@@ -1,7 +1,7 @@
+/* Estilos de los cards del menu */
 .titulo {
     color: #b10303;
     text-align: center;
-    margin-top: 30px;
     font-family: "Rowdies";
     font-style: normal;
     font-weight: 400;
@@ -11,102 +11,433 @@
   }
   
   /** Tarjetas Restaurante **/
-  
-  .wrap {
-    max-width: 1800px;
-    margin: 0 auto;
-    margin-top: 50px;
+.cont-menus {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.plato-carta {
+  width: 400px;
+  height: 148px;
+  margin-bottom: 1.5em;
+  display: grid;
+  display: flex;
+  align-items: center;
+  border: 1px solid #b10303;
+  border-radius: 10px;
+}
+
+.img-plato-carta {
+  display: grid;
+  flex-basis: 40%;
+  width: 150px;
+  height: 100%;
+  object-fit: cover;
+  background-color: #b10303;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.title-plato-carta {
+  border: 1px solid #b10303;
+  border-bottom: none;
+  border-top: none;
+  border-right: none;
+  height: 100%;
+  flex-basis: 100%;
+  padding: 0 1rem;
+  background-color: #fff1f1;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.title-plato-titulo {
+  text-align: center;
+  margin: 12px 0 12px 0 !important;
+  color: #b10303;
+  font-family: "Inder";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 19px;
+  text-align: center;
+}
+
+.title-plato-carta p {
+  height: 56px;
+  color: #550000;
+  font-family: "Blinker";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  overflow-y: auto;
+}
+
+.title-plato-carta p::-webkit-scrollbar {
+  width: 3px;
+}
+
+.title-plato-carta p::-webkit-scrollbar-thumb {
+  background-color: #B10303;
+  border-right: .75px solid #FFF1F1;
+}
+
+.cta-wrap_tarjeta-rest {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.precio_tarjeta-rest {
+  font-size: 13px;
+  color: #550000;
+  font-family: "Inder";
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+}
+
+.boton-item {
+  width: 85px;
+  height: 25px;
+  color: #b10303;
+  text-decoration: none;
+  font-family: "Rowdies";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 10px;
+  line-height: 12px;
+  border: 1px solid #b10303;
+  border-radius: 10px;
+}
+
+.boton-item:hover {
+  background-color: #b10303;
+  color: #ffff;
+  border: 1px solid #ffff;
+
+}
+ 
+/* Estilos del carrito */
+.carrito {
+  border: 1px solid #666;
+  width: 30%;
+  margin-top: 30px;
+  border-radius: 10px;
+  overflow: hidden;
+  margin-bottom: auto;
+  position: sticky !important;
+  top: 0;
+  transition: .3s;
+  /* Estilos para ocultar */
+  margin-right: -100%;
+  opacity: 0;
+}
+.carrito .header-carrito {
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  padding: 30px 0;
+}
+.carrito .carrito-item {
+  display: flex;
+  align-items: center;
+  /* justify-content: space-between; */
+  position: relative;
+  border-bottom: 1px solid #666;
+  padding: 20px;
+}
+.carrito .carrito-item img {
+  margin-right: 20px;
+}
+.carrito .carrito-item .carrito-item-titulo {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+.carrito .carrito-item .selector-cantidad {
+  display: inline-block;
+  margin-right: 25px;
+}
+.carrito .carrito-item .carrito-item-cantidad {
+  border: none;
+  font-size: 18px;
+  background-color: transparent;
+  display: inline-block;
+  width: 30px;
+  padding: 5px;
+  text-align: center;
+}
+.carrito .carrito-item .selector-cantidad i {
+  font-size: 18px;
+  width: 32px;
+  height: 32px;
+  line-height: 32px;
+  text-align: center;
+  border-radius: 50%;
+  border: 1px solid #000;
+  cursor: pointer;
+}
+.carrito .carrito-item .carrito-item-precio {
+  font-weight: bold;
+  display: inline-block;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+.carrito .carrito-item .btn-eliminar {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  color: #000;
+  font-size: 20px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  border-radius: 50%;
+  border: 1px solid #000;
+  cursor: pointer;
+  display: block;
+  background: transparent;
+  z-index: 20;
+}
+.carrito .carrito-item .btn-eliminar i {
+  pointer-events: none;
+}
+.carrito-total {
+  background-color: #f3f3f3;
+  padding: 30px;
+}
+.carrito-total .fila {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.carrito-total .btn-pagar {
+  display: block;
+  width: 100%;
+  border: none;
+  background: #000;
+  color: #fff;
+  border-radius: 5px;
+  font-size: 18px;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  transition: .3s;
+}
+.carrito-total .btn-pagar:hover {
+  scale: 1.05;
+}
+/* SECCION RESPONSIVE */
+@media screen and (max-width: 850px) {
+  .contenedor {
+      display: block;
   }
-  
-  .column-2.carta {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 2rem;
-    row-gap: 1rem;
+  .contenedor-items {
+      width: 100% !important;
   }
-  
-  .plato-carta {
-    display: flex;
-    align-items: center;
-    border: 1px solid #b10303;
-    border-radius: 10px;
+  .carrito {
+      width: 100%;
   }
-  
-  .img-plato-carta {
-    display: grid;
-    flex-basis: 40%;
-    justify-content: center;
-    background-image: url(../../../../src/assets/images/galeria/p1.jpg);
-    height: 136px;
-    border-radius: 10px 0 0 10px;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-  }
-  
-  .title-plato-carta {
-    border: 1px solid #b10303;
-    border-bottom: none;
-    border-top: none;
-    border-right: none;
-    flex-basis: 100%;
-    padding: 0 1rem;
-    background-color: #fff1f1;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
-  
-  .title-plato-carta h4 {
-    text-align: center;
-    margin-top: 15px;
-    color: #b10303;
-    font-family: "Inder";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 19px;
-  }
-  
-  .title-plato-carta p {
-    color: #550000;
-    font-family: "Blinker";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 14px;
-  }
-  
-  .cta-wrap_tarjeta-rest {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-  }
-  
-  .precio_tarjeta-rest span {
-    font-size: 13px;
-    color: #550000;
-    font-family: "Inder";
-    font-style: normal;
-    font-weight: 400;
-    line-height: 16px;
-  }
-  
-  .cta_tarjeta-rest {
-    background-color: #fff;
-    padding: 0.25rem 1rem;
-    border-radius: 10px;
-    border: 0.5px solid #b10303;
-  }
-  
-  .cta_tarjeta-rest a {
-    color: #b10303;
-    text-decoration: none;
-    font-family: "Rowdies";
-    font-style: normal;
-    font-weight: 300;
-    font-size: 10px;
-    line-height: 12px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-  }
+}
+/* ESTILOS DEL RESUMEN */
+.encoger-contenedor {
+  top: -100px;
+  transform: scale(0.70);
+}
+.CartContainer {
+  width: 940px;
+  height: 90%;
+  background-color: #ffffff;
+  border-radius: 20px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
+}
+.HeaderRes {
+  width: 950px;
+  height: 90%;
+  background-color: #000000;
+  border-radius: 20px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footerRes {
+  width: 950px;
+  height: 90%;
+  background-color: #000000;
+  border-radius: 20px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.checkoutRes {
+  margin: 30px;
+  margin-left: 650px;
+}
+.HeadingRes {
+  margin: 35px;
+  margin-left: 372px;
+  font-size: 20px;
+  font-family: 'Open Sans';
+  font-weight: 700;
+  color: #ffffff;
+}
+.ActionRes {
+  font-size: 14px;
+  font-family: 'Open Sans';
+  font-weight: 600;
+  color: #E44C4C;
+  cursor: pointer;
+  border-bottom: 1px solid #E44C4C;
+}
+.Cart-Items {
+  margin: auto;
+  width: 90%;
+  height: 30%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.image-boxRes {
+  width: 15%;
+  text-align: center;
+}
+.aboutRes {
+  height: 100%;
+  width: 24%;
+}
+.titleRes {
+  padding-top: 10px;
+  line-height: 21px;
+  font-size: 20px;
+  font-family: 'Open Sans';
+  font-weight: 800;
+  color: #202020;
+}
+.subtitleRes {
+  line-height: 10px;
+  font-size: 18px;
+  font-family: 'Open Sans';
+  font-weight: 600;
+  color: #909090;
+}
+.counter {
+  width: 15%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.btnRes {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #d9d9d9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-family: 'Open Sans';
+  font-weight: 900;
+  color: #202020;
+  cursor: pointer;
+}
+.countRes {
+  font-size: 20px;
+  font-family: 'Open Sans';
+  font-weight: 600;
+  color: #202020;
+}
+.pricesRes {
+  height: 100%;
+  text-align: right;
+}
+.amountRes {
+  font-size: 26px;
+  font-family: 'Open Sans';
+  font-weight: 800;
+  color: #202020;
+}
+.saveRes {
+  padding-top: 5px;
+  font-size: 14px;
+  font-family: 'Open Sans';
+  font-weight: 600;
+  color: #1687d9;
+  cursor: pointer;
+}
+.removeRes {
+  padding-top: 5px;
+  font-size: 14px;
+  font-family: 'Open Sans';
+  font-weight: 600;
+  color: #E44C4C;
+  cursor: pointer;
+}
+.padRes {
+  margin-top: 5px;
+}
+.checkoutRes {
+  float: right;
+  margin-right: 5%;
+  width: 28%;
+}
+.total {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.Subtotal {
+  font-size: 22px;
+  font-family: 'Open Sans';
+  font-weight: 700;
+  color: #ffffff;
+}
+.items {
+  font-size: 16px;
+  font-family: 'Open Sans';
+  font-weight: 500;
+  color: #909090;
+  line-height: 10px;
+}
+.total-amount {
+  font-size: 22px;
+  font-family: 'Open Sans';
+  font-weight: 900;
+  color: #ffffff;
+}
+.buttonRes {
+  margin-top: 10px;
+  width: 100%;
+  height: 40px;
+  border: none;
+  background: linear-gradient(to bottom right, #B8D7FF, #8EB7EB);
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 16px;
+  font-family: 'Open Sans';
+  font-weight: 600;
+  color: #202020;
+}
+
+.textNoLogin {
+  text-decoration: none;
+  text-align: center;
+  color: black;
+}
+.textNoLogin:hover {
+  color: darkgray;
+}
