--- a/src/app/pages/menu-rest/menu-rest.component.html
+++ b/src/app/pages/menu-rest/menu-rest.component.html
@@ -1,213 +1,38 @@
-<main class="contaner-fluid p-4">
-    <div class="">
-      <h2 class="titulo">Kentucky Fried Chicken</h2>
+<section class="contaner-fluid p-4">
+  <h2 class="titulo">Kentucky Fried Chicken</h2>
+  <div class="cont-menus">
+    <div class="plato-carta">
+      <img src="../../../assets/images/galeria/p2.jpg" class="img-plato-carta img-item"/>
+      <div class="title-plato-carta">
+        <span class="title-plato-titulo titulo-item">Lorem.</span>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+          lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
+          turpis. nulla consequat in varius libero ultrices. Nullam sodales
+          turpis. nulla consequat
+        </p>
+        <div class="cta-wrap_tarjeta-rest">
+          <span class="precio_tarjeta-rest">S/60.00</span>
+          <div class="cta_tarjeta-rest">
+            <button class="boton-item">Agregar</button>
+          </div>
+        </div>
+      </div>
     </div>
-    <section class="wrap">
-      <div class="wrap column-2 carta">
-        <div class="plato-carta">
-          <div class="img-plato-carta">
-            <img src="" alt="" />
-          </div>
-          <div class="title-plato-carta">
-            <h4>Lorem, ipsum dolor.</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-              lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
-              turpis. nulla consequat, in varius libero ultrices. Nullam sodales
-              turpis.
-            </p>
-            <div class="cta-wrap_tarjeta-rest">
-              <div class="precio_tarjeta-rest">
-                <span>S/60.00</span>
-              </div>
-              <div class="cta_tarjeta-rest">
-                <a href="">Agregar</a>
-              </div>
-            </div>
-          </div>
+  </div>
+  <div class="carrito" id="carrito">
+        <div class="header-carrito">
+            <h4>Resumen de las Compras</h4>
         </div>
-        <div class="plato-carta">
-          <div class="img-plato-carta">
-            <img src="" alt="" />
-          </div>
-          <div class="title-plato-carta">
-            <h4>Lorem, ipsum dolor.</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-              lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
-              turpis. nulla consequat, in varius libero ultrices. Nullam sodales
-              turpis.
-            </p>
-            <div class="cta-wrap_tarjeta-rest">
-                <div class="precio_tarjeta-rest">
-                  <span>S/60.00</span>
-                </div>
-                <div class="cta_tarjeta-rest">
-                  <a href="">Agregar</a>
-                </div>
-            </div>
-          </div>
+        <div class="carrito-items">
         </div>
-        <div class="plato-carta">
-          <div class="img-plato-carta">
-            <img src="" alt="" />
-          </div>
-          <div class="title-plato-carta">
-            <h4>Lorem, ipsum dolor.</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-              lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
-              turpis. nulla consequat, in varius libero ultrices. Nullam sodales
-              turpis.
-            </p>
-            <div class="cta-wrap_tarjeta-rest">
-              <div class="precio_tarjeta-rest">
-                <span>S/60.00</span>
-              </div>
-              <div class="cta_tarjeta-rest">
-                <a href="">Agregar</a>
-              </div>
+        <div class="carrito-total">
+            <div class="fila">
+                <strong>Tu Total</strong>
+                <span class="carrito-precio-total">
+                    $120.000,00
+                </span>
             </div>
-          </div>
         </div>
-      </div>
-      <div class="wrap-title-section"></div>
-      <div class="wrap column-2 carta">
-        <div class="plato-carta">
-          <div class="img-plato-carta">
-            <img src="" alt="" />
-          </div>
-          <div class="title-plato-carta">
-            <h4>Lorem, ipsum dolor.</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-              lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
-              turpis. nulla consequat, in varius libero ultrices. Nullam sodales
-              turpis.
-            </p>
-            <div class="cta-wrap_tarjeta-rest">
-              <div class="precio_tarjeta-rest">
-                <span>S/60.00</span>
-              </div>
-              <div class="cta_tarjeta-rest">
-                <a href="">Agregar</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="plato-carta">
-          <div class="img-plato-carta">
-            <img src="" alt="" />
-          </div>
-          <div class="title-plato-carta">
-            <h4>Lorem, ipsum dolor.</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-              lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
-              turpis. nulla consequat, in varius libero ultrices. Nullam sodales
-              turpis.
-            </p>
-            <div class="cta-wrap_tarjeta-rest">
-              <div class="precio_tarjeta-rest">
-                <span>S/60.00</span>
-              </div>
-              <div class="cta_tarjeta-rest">
-                <a href="">Agregar</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="plato-carta">
-          <div class="img-plato-carta">
-            <img src="" alt="" />
-          </div>
-          <div class="title-plato-carta">
-            <h4>Lorem, ipsum dolor.</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-              lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
-              turpis. nulla consequat, in varius libero ultrices. Nullam sodales
-              turpis.
-            </p>
-            <div class="cta-wrap_tarjeta-rest">
-              <div class="precio_tarjeta-rest">
-                <span>S/60.00</span>
-              </div>
-              <div class="cta_tarjeta-rest">
-                <a href="">Agregar</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="wrap column-2 carta">
-          <div class="plato-carta">
-            <div class="img-plato-carta">
-              <img src="" alt="" />
-            </div>
-            <div class="title-plato-carta">
-              <h4>Lorem, ipsum dolor.</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-                lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
-                turpis. nulla consequat, in varius libero ultrices. Nullam sodales
-                turpis.
-              </p>
-              <div class="cta-wrap_tarjeta-rest">
-                <div class="precio_tarjeta-rest">
-                  <span>S/60.00</span>
-                </div>
-                <div class="cta_tarjeta-rest">
-                  <a href="">Agregar</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="plato-carta">
-            <div class="img-plato-carta">
-              <img src="" alt="" />
-            </div>
-            <div class="title-plato-carta">
-              <h4>Lorem, ipsum dolor.</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-                lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
-                turpis. nulla consequat, in varius libero ultrices. Nullam sodales
-                turpis.
-              </p>
-              <div class="cta-wrap_tarjeta-rest">
-                <div class="precio_tarjeta-rest">
-                  <span>S/60.00</span>
-                </div>
-                <div class="cta_tarjeta-rest">
-                  <a href="">Agregar</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="plato-carta">
-            <div class="img-plato-carta">
-              <img src="" alt="" />
-            </div>
-            <div class="title-plato-carta">
-              <h4>Lorem, ipsum dolor.</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-                lorem ut nulla consequat, in varius libero ultrices. Nullam sodales
-                turpis. nulla consequat, in varius libero ultrices. Nullam sodales
-                turpis.
-              </p>
-              <div class="cta-wrap_tarjeta-rest">
-                <div class="precio_tarjeta-rest">
-                  <span>S/60.00</span>
-                </div>
-                <div class="cta_tarjeta-rest">
-                  <a href="">Agregar</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      <div class="wrap-title-section"></div>
-    </section>
-  </main>
+    </div>
+</section>
