--- a/src/app/pages/usuario/user-ayuda/user-ayuda.component.html
+++ b/src/app/pages/usuario/user-ayuda/user-ayuda.component.html
@@ -25,7 +25,7 @@
                     <h4>Descripción:</h4>
                     <input type="text" class="form-control" id="descrip">
                     <div class="botones-container">
-                        <button class="btn btn-enviar">ENVIAR</button>
+                        <button class="btn btn-enviar">Enviar</button>
                     </div>
                 </div>
             </div>
