--- a/src/app/pages/usuario/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/usuario/user-dashboard/user-dashboard.component.html
@@ -6,7 +6,7 @@
             </div>
             <div class="user-buttoms">
                 <a class="btn-user" routerLink="/user/informacion">
-                    <div><i class="bi bi-person-lines-fill"></i> Información del usuario </div>
+                    <div><i class="bi bi-person-lines-fill"></i> Información del Usuario </div>
                     <i class="bi bi-caret-right-fill"></i>
                 </a>
                 <a class="btn-user" routerLink="/user/historial">
