--- a/src/app/pages/admin/gestion-rest/gestion-rest.component.css
+++ b/src/app/pages/admin/gestion-rest/gestion-rest.component.css
@@ -42,8 +42,8 @@
 .titulo{
     font-family: "Rowdies", sans-serif;
     font-size: 40px;
-    font-weight: bold;
     margin-bottom: 5px;
+    color: rgba(177, 3, 3, 1);
 }
 
 .paginationContent {
