--- a/src/app/pages/usuario/user-ayuda/user-ayuda.component.css
+++ b/src/app/pages/usuario/user-ayuda/user-ayuda.component.css
@@ -19,7 +19,6 @@
     color: #B10303;
     font-size: 30px;
     margin-top: 20px;
-    font-weight: bold;
     text-align: center;
 }
 
@@ -40,6 +39,9 @@
     margin-left: 10px;
     display: inline-block; /* Para permitir que el ícono y el texto estén en línea */
     vertical-align: middle;
+    font-family: "Rowdies", sans-serif;
+    font-weight: 300;
+    font-style: normal;
 }
 
 #descrip{
@@ -69,6 +71,8 @@
     cursor: pointer;
     font-size: 18px;
     font-family: "Rowdies", sans-serif;
+    font-weight: 300;
+    font-style: normal;
 }
 
 
