--- a/src/app/pages/usuario/user-preguntas/user-preguntas.component.css
+++ b/src/app/pages/usuario/user-preguntas/user-preguntas.component.css
@@ -20,7 +20,6 @@
     color: #B10303;
     font-size: 35px;
     margin-top: 45px;
-    font-weight: bold;
     text-align: center;
 }
 
@@ -36,11 +35,17 @@
     background-color: #f1b0b0;
     padding: 0.4rem 1rem; 
     font-size: 0.9rem;
+    font-family: "Rowdies", sans-serif;
+    font-weight: 300;
+    font-style: normal;
 }
 
 .accordion-body {
     padding: 0.3rem 1rem; 
     font-size: 0.8rem; 
+    font-family: "Blinker", sans-serif;
+    font-weight: 300;
+    font-style: normal;
 }
 
 
