--- a/src/app/pages/admin/gestion-rest-asociados/gestion-rest-asociados.component.html
+++ b/src/app/pages/admin/gestion-rest-asociados/gestion-rest-asociados.component.html
@@ -1,7 +1,7 @@
 <main class="p-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2 class="titulo">Gestión de Acuerdos Comerciales</h2>
-        <button class="btn btn-success"><i class="bi bi-plus-circle"></i> Registrar</button>
+        <button class="btn btn-success" (click)="openSave(content)"><i class="bi bi-plus-circle"></i> Registrar</button>
     </div>
     <table class="table">
         <thead>
@@ -14,16 +14,59 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>Acuerdo Bembos</td>
-                <td>Text</td>
-                <td>Text</td>
-                <td>Text</td>
+            <tr *ngFor="let item of collection.data | paginate: config">
+                <td>{{ item.nombre }}</td>
+                <td>{{ item.fecha }}</td>
+                <td>{{ item.descripcion }}</td>
+                <td>{{ item.idRest }}</td>
                 <td>
-                    <button class="btn btn-warning"><i class="bi bi-pencil-square"></i></button>
-                    <button class="btn btn-danger btnDelete"><i class="bi bi-trash3-fill"></i></button>
+                    <button class="btn btn-warning" (click)="openEdit(content, item)"><i class="bi bi-pencil-square"></i></button>
+                    <button class="btn btn-danger btnDelete" (click)="eliminarAsoc(item)"><i class="bi bi-trash3-fill"></i></button>
                 </td>
             </tr>
         </tbody>
     </table>
+
+    <div class="paginationContent">
+        <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+    </div>
+
+    <!-- Registrar Modal -->
+    <ng-template #content let-modal>
+        <div class="modal-header">
+            <h4 class="modal-title" id="modal-basic-title">Registrar/Actualizar Menus</h4>
+            <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+        </div>
+        <div class="modal-body">
+            <form>
+                <div class="mb-3">
+
+                    <form [formGroup]="asociadosForm">
+                        <div class="form-group">
+                            <label>Nombre</label>
+                            <input type="text" formControlName="nombre" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label>Fecha</label>
+                            <input type="text" formControlName="fecha" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label>Descripción</label>
+                            <input type="text" formControlName="descripcion" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label>ID Rest</label>
+                            <input type="text" formControlName="idRest" class="form-control">
+                        </div>
+                    </form>
+
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-outline-dark" (click)="guardarAsoc()" *ngIf="!btnActualizar">Registrar</button>
+            <button type="button" class="btn btn-outline-dark" (click)="actualizarAsoc()" *ngIf="btnActualizar">Actualizar</button>
+        </div>
+    </ng-template>
+
 </main>
