Logica Menu y algunos arreglos

--- a/src/app/pages/menu-rest/menu-rest.component.css
+++ b/src/app/pages/menu-rest/menu-rest.component.css
@@ -9,6 +9,10 @@
     line-height: 56px;
     align-items: center;
   }
+
+.row{
+  margin-top: 40px;
+}
   
   /** Tarjetas Restaurante **/
 .cont-menus {
