--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -4,7 +4,7 @@
             <form [formGroup]="formReg" (ngSubmit)="onSubmit()">
                 <img src="../../../assets/images/logo_foodie_rojo.png" class="register-image">
                 <input type="email" placeholder="Email:" class="register-input-email" required formControlName="email" name="email">
-                <input type="password" placeholder="Contraseña:" class="register-input-contraseña" required formControlName="password" name="password">>
+                <input type="password" placeholder="Contraseña:" class="register-input-contraseña" required formControlName="password" name="password">
                 <button type="submit" class="register-button">REGISTRARSE</button>
             </form>
         </div>
