--- a/src/app/pages/restaurantes/restaurantes.component.html
+++ b/src/app/pages/restaurantes/restaurantes.component.html
@@ -1,12 +1,12 @@
 <main class="container-fluid p-4">
     <section class="categorias">
-        <button type="button" class="btn btn-custom" (click)="filtrarPorCategoria('Todos')">Todos</button>
-        <button type="button" class="btn btn-custom" (click)="filtrarPorCategoria('Pollos')">Pollerias</button>
+        <button style="width: 90px;" type="button" class="btn btn-custom" (click)="filtrarPorCategoria('Todos')">Todos</button>
+        <button style="width: 105px;" type="button" class="btn btn-custom" (click)="filtrarPorCategoria('Pollos')">Pollerias</button>
         <button type="button" class="btn btn-custom" (click)="filtrarPorCategoria('Hamburguesas')">Hamburgueserias</button>
-        <button type="button" class="btn btn-custom" (click)="filtrarPorCategoria('Pizzerias')">Pizzerias</button>
-        <button type="button" class="btn btn-custom" (click)="filtrarPorCategoria('Chifa')">Chifas</button>
-        <button type="button" class="btn btn-custom" (click)="filtrarPorCategoria('Parrilla')">Parrillas</button>
-        <button type="button" class="btn btn-custom" (click)="filtrarPorCategoria('Mariscos')">Mariscos</button>
+        <button style="width: 105px;" type="button" class="btn btn-custom" (click)="filtrarPorCategoria('Pizzerias')">Pizzerias</button>
+        <button style="width: 105px;" type="button" class="btn btn-custom" (click)="filtrarPorCategoria('Chifa')">Chifas</button>
+        <button style="width: 105px;" type="button" class="btn btn-custom" (click)="filtrarPorCategoria('Parrilla')">Parrillas</button>
+        <button style="width: 105px;" type="button" class="btn btn-custom" (click)="filtrarPorCategoria('Mariscos')">Mariscos</button>
         <button type="button" class="btn btn-custom" (click)="filtrarPorCategoria('Tradicional')">Tradicionales</button>
     </section>
     <section class="restaurantes p-4">
@@ -17,7 +17,7 @@
                     <h5 class="card-title text-center mb-2">{{ item.nombre }}</h5>
                     <p class="card-text">{{ item.descripcion }}</p>
                     <div class="text-center">
-                        <button type="button" class="btn btn-visitar"><a href="#">Visitar</a></button>
+                        <button type="button" class="btn btn-visitar" (click)="verMenuRestaurante(item.nombre)">Visitar</button>
                     </div>
                 </div>
             </div>
